--- a/test.html
+++ b/test.html
@@ -12,13 +12,13 @@
     <header>
     <img id="myimg" src="img/gg.jpg" alt="my image">
     <h1 style="font-size: 30px;"><em>Mechatronic Engineering Student</em></h1>
-     <p style="width: 50%;">I’m fourth year mechatronics engineering
+     <p style="width: 50%;">I'm fourth year mechatronics engineering
     student. interested in electronic
     specialties: microcontroller, PLC, robotics,
     I have knowledge of the C language and
     mechanical drawing such as AutoCAD and
     Solid Work.
-    In addition to this, I’m looking for
+    In addition to this, I'm looking for
     international internships, seeking
     knowledge, discoveries, and new
     experiences.</p> 
