--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-    <img id="myimg" src="img/gg.jpg" alt="my image">
+    <img id="myimg" src="gg.jpg" alt="mustafa-alchaar">
     <h1 style="font-size: 30px;"><em>Mechatronic Engineering Student</em></h1>
      <p style="width: 50%;">I'm fourth year mechatronics engineering
     student. interested in electronic
@@ -30,7 +30,7 @@
         <p>my address:karabuk/turkey</p>
         <p>phone number: <a href="tel:05522955578">+90 55 22 955 578</a></p>
         <p>Email: <a href="mailto:mustafajava51@gmail.com">mustafajava51@gmail.com</a></p>
-        <p><a href="https://www.linkedin.com/in/mustafa-alchaar/"> <img width="20px" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-linkedin-512.png" alt="linked icon"></a></p>
+        <p><a href="https://www.linkedin.com/in/mustafa-alchaar/" target="_blank"> <img width="20px" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-linkedin-512.png" alt="linked icon"></a></p>
     </div>
 </section><hr>
 
