--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <h2>Contact</h2>
     <div>
         <p>my address:karabuk/turkey</p>
-        <p>phone number: <a href="tel:05522955578">+90 55 22 955 578</a></p>
-        <p>Email: <a href="mailto:mustafajava51@gmail.com">mustafajava51@gmail.com</a></p>
+        <p>phone number: <a href="tel:05522955578" style="color: rgb(68, 59, 59)">+90 55 22 955 578</a></p>
+        <p>Email: <a href="mailto:mustafajava51@gmail.com" style="color: rgb(68, 59, 59)">mustafajava51@gmail.com</a></p>
         <p><a href="https://www.linkedin.com/in/mustafa-alchaar/" target="_blank"> <img width="20px" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-linkedin-512.png" alt="linked icon"></a></p>
     </div>
 </section><hr>
@@ -56,7 +56,7 @@
 </main>
     
         <h2>Contact me</h2>
-        <form>
+        <form action="https://formsubmit.co/mustafajava51@email.com" method="POST">
             <div>
                 <label for="name">Name</label><br>
                 <input type="text" name="name" id="name" required >
